header, navbar 구현

--- a/react-board/src/index.scss
+++ b/react-board/src/index.scss
@@ -1,4 +1,5 @@
 @use "sass:list";
+$PretendardRegular: "Pretendard-Regular";
 $NanumSquareRound: "NanumSquareRound";
 $colors: #e53a40, #efdc05, #5cab7d, #30a9de, #ffffff, #222222;
 // Reset CSS
@@ -136,21 +137,26 @@ table {
 // Font
 @font-face {
   font-family: $NanumSquareRound;
-  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff")
-    format("woff");
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
+@font-face {
+  font-family: $PretendardRegular;
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
 :root {
-  font-family: $NanumSquareRound, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: $PretendardRegular, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 }
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
