--- a/react-board/src/App.scss
+++ b/react-board/src/App.scss
@@ -2,8 +2,35 @@
 $colors: #e53a40, #efdc05, #5cab7d, #30a9de, #ffffff, #222222;
 
 #root {
+  width: 100%;
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+// Header
+header,
+nav ul {
+  display: flex;
+  align-items: center;
+}
+header {
+  justify-content: space-between;
+  margin: 1.25rem;
+}
+#logo {
+  width: 50px;
+  height: 50px;
+}
+nav {
+  width: 50%;
+  min-width: 250px;
+}
+nav ul {
+  justify-content: space-around;
+  font-size: 1.25rem;
+}
+nav a {
+  text-decoration-line: none;
+  color: #222222;
+  padding-top: 5px;
 }
