--- a/react-board/src/App.scss
+++ b/react-board/src/App.scss
@@ -85,32 +85,6 @@ nav a {
   display: block;
 }
 
-@media (max-width: 768px) {
-  .container {
-    flex-direction: column;
-    box-shadow: 0 4px 4px -5px #333;
-  }
-
-  .mainNav {
-    display: none;
-  }
-
-  .dropdown-menu {
-    display: block;
-  }
-
-  .dropdown-list {
-    position: static;
-  }
-}
-
-@media (min-width: 769px) {
-  .dropdown-menu {
-    display: none;
-    flex-direction: row;
-  }
-}
-
 //Main Section
 section {
   display: flex;
@@ -180,6 +154,48 @@ article h2 {
   background-color: #8fbc94;
 }
 
+//Login
+.signIn {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  padding: 2.5rem;
+  margin: 0 auto;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+}
+
+.signIn .title {
+  font-weight: 500;
+  font-size: $fontBig;
+}
+
+.signIn > div {
+  width: 100%;
+}
+
+.signIn input {
+  width: 90%;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  padding: 1rem;
+  font-size: 16px;
+}
+
+.signIn button {
+  width: 100%;
+  color: #ffffff;
+  background-color: #0250bb;
+}
+
+.signIn button.inactive {
+  border: none;
+  color: #222222;
+  background-color: $grey;
+  pointer-events: none;
+}
 // Footer
 #footer {
   display: flex;
@@ -202,4 +218,35 @@ article h2 {
   align-items: center;
   justify-content: center;
   padding: 1.875rem;
+}
+
+//Media Query
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    box-shadow: 0 4px 4px -5px #333;
+  }
+
+  .mainNav {
+    display: none;
+  }
+
+  .dropdown-menu {
+    display: block;
+  }
+
+  .dropdown-list {
+    position: static;
+  }
+
+  .signIn {
+    width: 80%;
+  }
+}
+
+@media (min-width: 769px) {
+  .dropdown-menu {
+    display: none;
+    flex-direction: row;
+  }
 }
