--- a/react-board/src/App.scss
+++ b/react-board/src/App.scss
@@ -280,6 +280,62 @@ button.inactive {
   pointer-events: none;
 }
 
+//SignUp
+#signUpForm,
+#signUpForm > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#signUp h2 {
+  background-color: transparent;
+  font-size: $fontBig;
+}
+#signUp form {
+  width: 50rem;
+}
+#signUpForm {
+  width: 50%;
+  gap: 20px;
+  flex-direction: column;
+  margin: 0 auto;
+}
+#signUpForm > div {
+  gap: 20px;
+  position: relative;
+  width: 100%;
+}
+#signUpForm input {
+  width: 100%;
+  height: 1.875rem;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: $lightGrey;
+}
+#signUpForm .status {
+  position: absolute;
+  left: 103%;
+  width: 40px;
+  height: 40px;
+  background: url("../public/checkCircle.svg") center / contain no-repeat;
+  opacity: 0;
+}
+#signUpForm .status.show {
+  opacity: 1;
+}
+#signUp button {
+  width: 10rem;
+  color: #ffffff;
+  background-color: #0250bb;
+}
+#signUp button.inactive {
+  border: none;
+  color: #222222;
+  background-color: $grey;
+  pointer-events: none;
+}
+
 //ContentList
 #contentList h2 {
   width: 100%;
@@ -433,6 +489,17 @@ button.inactive {
   section {
     min-width: 280px;
   }
+
+  //signup section
+  #signUp form {
+    width: 37.5rem;
+  }
+  #signUpForm .status {
+    left: 101%;
+    width: 30px;
+    height: 30px;
+  }
+
   //table section
   .contentTable {
     font-size: $fontSmall;
