로그인 페이지 수정

--- a/react-board/src/App.scss
+++ b/react-board/src/App.scss
@@ -238,41 +238,47 @@ section h2 {
 }
 
 //Login
-.signIn {
+#signIn h2 {
+  background-color: transparent;
+  font-size: $fontBig;
+}
+#signIn form,
+.loginBox > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loginBox {
   display: flex;
   gap: 20px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 40%;
+  width: 30rem;
   padding: 2.5rem;
   margin: 0 auto;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 }
-
-.signIn .title {
-  font-weight: 500;
-  font-size: $fontBig;
-}
-
-.signIn > div {
+.loginBox > div {
   width: 100%;
 }
-
-.signIn input {
+#signIn input {
   width: 90%;
   border-radius: 0.375rem;
   border-width: 1px;
   padding: 1rem;
   font-size: 16px;
 }
-
-.signIn button {
+#signIn a {
+  align-self: flex-end;
+  text-decoration-line: underline;
+  font-size: $fontMaxSmall;
+}
+#signIn button {
   width: 100%;
   color: #ffffff;
   background-color: #0250bb;
 }
-
 button.inactive {
   border: none;
   color: #222222;
@@ -482,8 +488,8 @@ button.inactive {
     position: static;
   }
 
-  .signIn {
-    width: 80%;
+  .loginBox {
+    width: 12.5rem;
   }
 
   section {
