--- a/react-board/src/App.scss
+++ b/react-board/src/App.scss
@@ -143,7 +143,9 @@ section h2 {
 #userInfo .userId {
   text-align: left;
 }
-
+#userInfo a {
+  text-decoration: underline;
+}
 //Table Section
 .contentTable {
   width: 100%;
@@ -346,6 +348,8 @@ button.inactive {
 #contentList h2 {
   width: 100%;
 }
+
+//Pagination
 .navigatePage,
 .navigatePage span,
 .navigatePage .pageNums,
@@ -363,10 +367,11 @@ button.inactive {
 .navigatePage span {
   font-size: $fontSmall;
   cursor: pointer;
-}
-.navigatePage span.hidden {
-  display: none;
   opacity: 0;
+}
+.navigatePage span.active {
+  display: none;
+  opacity: 1;
 }
 .navigatePage .previous::before {
   content: "";
@@ -377,14 +382,14 @@ button.inactive {
 .navigatePage .pageNums {
   gap: 10px;
 }
-.navigatePage .pageNums a {
+.navigatePage .pageNums span {
   width: 25px;
   height: 25px;
   padding: 0.313rem;
   font-size: $fontSmall;
   cursor: pointer;
 }
-.navigatePage .pageNums a.active {
+.navigatePage .pageNums span.active {
   color: $blue;
   background-color: #ffffff;
 }
@@ -399,6 +404,7 @@ button.inactive {
 //ContentDetail
 #contentDetail,
 #contentDetail .wrap,
+#contentDetail .buttonBox,
 #contentDetail .top,
 #contentDetail .content,
 #contentDetail .userInfo,
@@ -406,6 +412,17 @@ button.inactive {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+#contentDetail .buttonBox {
+  gap: 20px;
+  align-self: flex-end;
+}
+#contentDetail .buttonBox button {
+  cursor: pointer;
+}
+#contentDetail .buttonBox .delete {
+  color: #ffffff;
+  background-color: #e53a40;
 }
 #contentDetail .top {
   flex-direction: column;
@@ -518,6 +535,7 @@ button.inactive {
   .contentTable .title {
     min-width: 50px;
     padding: 0.75rem;
+    cursor: pointer;
   }
 
   .navigatePage .pageNums a {
